# Brain-Vortex-Detection-PY

./: LICENSE  README.md  USAGE.md  pyproject.toml  subjects-dmt.csv
configs/: defaults.yaml
scripts/: run_detection_batch.py  run_full_analytic_cube.py  run_full_detection_bundle.py
src/matphase/: __init__.py
src/matphase/analysis/: __init__.py  _utils.py  classify.py  contrast.py  distribution.py  reporting.py  storage.py  temporal_trends.py
src/matphase/cli/: __init__.py  __main__.py  analysis.py  detection.py
src/matphase/config/: __init__.py  loader.py  schema.py
src/matphase/data/: __init__.py  templates.py
src/matphase/detect/: __init__.py  compatibility.py  expansion.py  phase_field.py  spirals.py  surrogates.py  thresholds.py
src/matphase/io/: __init__.py  cifti.py  cifti_to_surface.py  parcellation.py  surface.py  validation.py
src/matphase/preprocess/: __init__.py  interpolate.py  spatial.py  temporal.py
src/matphase/utils/: __init__.py  logging.py
src/matphase/viz/: __init__.py  detection.py  export.py  phase_field.py  statistics.py
testdata/: left_brain_parcellation.npy  right_brain_parcellation.npy
